# factur-ia-web-client

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  conftest.py  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/css/: source.css
clients/: abonnements_client.py  admins_plateforme_client.py  api_client.py  base_client.py  clients_client.py  comptes_client.py  documents_client.py  entreprises_client.py  exceptions.py  factures_client.py  produits_client.py  taux_tva_client.py  utilisateurs_client.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
contracts/: openapi.json
core/: constants.py  forms.py  pagination.py  views.py
core/tests/: test_dummy.py
core/views/: abonnements.py  admins_plateforme.py  auth.py  catalogue.py  clients.py  documents.py  equipe.py  home.py  profil.py  taux_tva.py
docs/: openapi-client-setup.md
static/css/: tailwind.css
templates/: base.html
templates/core/: abonnements.html  admins.html  catalogue.html  catalogue_detail.html  catalogue_form.html  client_detail.html  client_form.html  clients.html  equipe.html  home.html  login.html  onboarding.html  plan_form.html  plans_admin.html  profil.html  taux_tva_admin.html  taux_tva_form.html  upload.html
templates/core/auth/: forgot-password.html  profile-lock.html  reset-password.html  sign-in.html  sign-up.html
templates/core/partials/: pagination.html
templates/partials/: footer.html  header.html
