[project]
name = "factur-ia-web-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-redis>=7.0.0",
    "django-tailwind-cli>=4.6.2",
    "dotenv>=0.9.9",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "django-stubs>=6.0.5",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.16",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
major_on_zero = false
